--- a/Aboutme/19100163.md
+++ b/Aboutme/19100163.md
@@ -1,2 +1,20 @@
-**Hola que tal!!**  
-que dice el pueblo?
+**Lenguajes de programación que conoce:**  
+*R= C# y Java.*  
+  
+**Herramientas de desarrollo que usa:**  
+*R= Una laptop, software Visual Studio.*  
+  
+  **Ya ha trabajado antes con Git/GitHub o es su primera vez?**  
+  *R= Es la primera vez.*  
+    
+**Conoce usted el lenguaje Java?**  
+*R= Si, pero no a profundo.*  
+  
+**Tiene conocimiento o ha trabajado con Bases de datos?**  
+*R= No.*  
+
+**Conoce o alguna vez ha trabajado con el lenguaje de consultas SQL?**  
+*R= Solamente una vez, fue muy poco.*  
+
+ **Trabaja usted atualmente? En el area de sistemas?**  
+ *R= No, ninguna de las 2.*    
